# ai-video-generator

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE.md  README.md  README.zh-CN.md  SECURITY.md  audio.py  docker-compose.cuda.yml  docker-compose.yml  main.py  pyproject.toml
api/: app.py  db.py  schemas.py
config/: config.example.yaml  settings.py
core/: animation_planner.py  embedder.py  hyperframes_agent.py  hyperframes_guard.py  hyperframes_renderer.py  hyperframes_sandbox.py  hyperframes_schema.py  image_provider.py  kinetic_planner.py  llm.py  prompts.py  remotion_planner.py  remotion_refiner.py  remotion_renderer.py  remotion_review.py  remotion_schema.py  retriever.py  scene_splitter.py  schema.py  stt.py  template_registry.py  tts.py  tts_style_planner.py  vectordb.py  video_gen_provider.py  video_renderer.py  video_reviewer.py  vision_provider.py
core/prompts/: EXTRACT_KEYWORDS_PROMPT.txt  GENERATE_SCRIPT.txt  GENERATE_TWEET.txt  IMAGE_PROMPT.txt  OLD_SPLIT_SCENES.txt  PLAN_HYPERFRAMES_VIDEO.txt  PLAN_KINETIC_TEXT.txt  PLAN_REMOTION_COMPONENTS.txt  PLAN_REMOTION_IMAGE.txt  PLAN_REMOTION_SCENE.txt  PLAN_REMOTION_SKETCH_COURSE.txt  PLAN_SCENE_ANIMATION.txt  PLAN_TTS_WHOLE_STYLE.txt  PLAN_TWEET_IMAGES.txt  POLISH_SCRIPT.txt  POLISH_SCRIPT_WITH_CONTEXT.txt  POLISH_TWEET.txt  RESTRUCTURE_TRANSCRIPT.txt  REVIEW_REMOTION_FRAMES.txt  REVIEW_VIDEO_FRAMES.txt  SELECT_REMOTION_TEMPLATE.txt  SPLIT_SCENES.txt  SYSTEM_POLISHER.txt  (+11 more)
data/: jobs.db
deploy/: nginx.conf
docs/: ARCHITECTURE.md  ARCHITECTURE.zh-CN.md
fronted/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
pipeline/: generate.py  ingest.py  produce.py  produce_hyperframes.py  produce_remotion.py  produce_seedance.py  tweet.py
remotion/: package-lock.json  package.json  tsconfig.json
tests/: test_ingest.py  test_llm.py  test_llm_connectivity.py  test_produce.py  test_remotion_produce.py  test_remotion_refiner.py  test_seedance_video.py  test_stt.py  test_tts_styles.py  test_vectordb.py  test_video_reviewer.py
utils/: audio_utils.py  file_utils.py  logger.py  media_utils.py  subtitle_utils.py  text_utils.py
(+148 files in other folders)
