[project]
name = "ai-content-pipeline"
version = "0.1.0"
description = "AI短视频内容自动化生产系统"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.0.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-community>=0.3.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "pyyaml>=6.0",
    "pydub>=0.25.0",
    "ollama>=0.4.0",
    "numpy>=1.24",
    "audioop-lts>=0.2.2",
    "openai>=2.33.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
