[project]
name = "ai-content-pipeline"
version = "0.1.0"
description = "AI短视频内容自动化生产系统"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.0.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-community>=0.3.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "pyyaml>=6.0",
    "pydub>=0.25.0",
    "ollama>=0.4.0",
    "numpy>=1.24",
    "audioop-lts>=0.2.2",
    "openai>=2.33.0",
    "langchain-huggingface>=1.2.2",
    "langchain-chroma>=1.1.0",
    "pillow>=11.0.0,<12.0.0",
    "moviepy>=2.2.0",
    "edge-tts>=7.2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.18",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
